queries are processed using DIntArray, saving memory and cpu